--- a/PMS-PropertyHapa.Staff/Views/Lease/AddLease.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Lease/AddLease.cshtml
@@ -1287,7 +1287,7 @@
     function populateUnits(propertyId, selectedUnitId) {
         $.ajax({
             url: '/Lease/GetUnitsDll',
-            method: 'GET',
+            method: 'POST',
             data: { AssetIds: propertyId },
             success: function (units) {
                 var $unitDropdown = $('#unitDropdown');
