--- a/PMS-PropertyHapa.Staff/Views/Accounting/Deposit.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Accounting/Deposit.cshtml
@@ -393,7 +393,7 @@
     function populateUnits(propertyId, $unitDropdown, selectedUnits) {
         $.ajax({
             url: '/Lease/GetUnitsDll',
-            method: 'GET',
+            method: 'POST',
             data: { AssetIds: propertyId },
             success: function (units) {
                 $unitDropdown.empty();
